# ross-protocol

./: .gitignore  Cargo.toml  README.md
src/: convert_packet.rs  frame.rs  lib.rs  packet.rs  packet_type.rs  protocol.rs  ross_can.rs  ross_convert_packet.rs  ross_frame.rs  ross_packet.rs  ross_packet_type.rs  ross_protocol.rs
src/error/: error_packet.rs  mod.rs
src/event/: bcm.rs  bcm_event.rs  bootloader.rs  bootloader_event.rs  button.rs  button_event.rs  configurator.rs  configurator_event.rs  event_code.rs  event_packet.rs  gateway.rs  general.rs  general_event.rs  internal.rs  internal_event.rs  message.rs  mod.rs  programmer.rs  programmer_event.rs  relay.rs
src/interface/: can.rs  mod.rs  serial.rs  usart.rs
src/ross_error/: mod.rs  ross_error_packet.rs
src/ross_event/: mod.rs  ross_bootloader_event.rs  ross_configurator_event.rs  ross_event_code.rs  ross_event_packet.rs  ross_general_event.rs  ross_programmer_event.rs
src/ross_interface/: mod.rs  ross_can.rs  ross_serial.rs  ross_usart.rs
src/test/: mod.rs  packet.rs
src/test/event/: bcm.rs  button.rs  configurator.rs  internal.rs  mod.rs  programmer.rs
src/test/event_test/: bcm_event_test.rs  bootloader_event_test.rs  bootloader_test.rs  button_event_test.rs  configurator_event_test.rs  general_event_test.rs  general_test.rs  internal_event_test.rs  mod.rs  programmer_event_test.rs  programmer_test.rs
src/tests/: frame_test.rs  mod.rs  ross_frame_test.rs  ross_packet_test.rs
src/tests/event_test/: bcm_event_test.rs  bootloader_event_test.rs  button_event_test.rs  general_event_test.rs  (+3 more)
(+5 files in other folders)
