[package]
name = "ross-protocol"
version = "2.9.0"
authors = ["Linas Nikiperavičius <linas@linasdev.com>"]
edition = "2018"
license-file = "LICENSE.md"
description = "Protocol for the Rusty Old Smart System"
repository = "https://github.com/linasdev/ross-protocol"
readme = "README.md"

[dependencies]
bxcan = "0.4.0"
nb = "1.0.0"
embedded-hal = "0.2.5"

[dependencies.cobs]
version = "0.1.4"
default-features = false

[dependencies.serialport]
version = "4.0.1"
optional = true

[features]
default = []
std = ["serialport"]
send = []
